🔧 Fix AI agent workflow dependencies
- Add Node.js setup and npm dependency installation
- Create package.json for AI agent scripts
- Fix missing @google/generative-ai module error
- Ensure proper YAML formatting in workflow

--- a/.github/workflows/ai-agent.yml
+++ b/.github/workflows/ai-agent.yml
@@ -100,7 +100,6 @@ jobs:
             await notifyProcessingStart({ github, context, taskData });
         env:
           TASK_DATA: ${{ needs.parse-issue.outputs.task-data }}
-
   ai-implementation:
     name: Generate AI Implementation
     needs: [validate-trigger, check-duplicate, parse-issue, notify-start]
@@ -118,6 +117,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: '.github/scripts/package.json'
+          
+      - name: Install Dependencies
+        run: |
+          cd .github/scripts
+          npm install
           
       - name: Create Feature Branch
         id: create-branch
