🔧 Fix AI Agent workflow - Add CommonJS type to package.json

--- a/.github/scripts/package.json
+++ b/.github/scripts/package.json
@@ -2,7 +2,7 @@
   "name": "ai-agent-scripts",
   "version": "1.0.0",
   "description": "GitHub Actions scripts for AI agent automation",
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.2",
