--- a/.github/workflows/ai-agent.yml
+++ b/.github/workflows/ai-agent.yml
@@ -6,6 +6,10 @@ on:
   issue_comment:
     types: [created]
 
+concurrency:
+  group: ai-agent-${{ github.event.issue.number || github.event.number }}
+  cancel-in-progress: false
+
 env:
   NODE_VERSION: "20"
 
@@ -23,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: .github/scripts
-          
+
       - name: Validate Trigger Conditions
         id: validate
         uses: actions/github-script@v7
@@ -46,7 +50,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: .github/scripts
-          
+
       - name: Check for Existing AI Processing
         id: check
         uses: actions/github-script@v7
@@ -69,7 +73,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: .github/scripts
-          
+
       - name: Extract Task Information
         id: parse
         uses: actions/github-script@v7
@@ -90,7 +94,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: .github/scripts
-          
+
       - name: Post Start Notification
         uses: actions/github-script@v7
         with:
@@ -100,6 +104,7 @@ jobs:
             await notifyProcessingStart({ github, context, taskData });
         env:
           TASK_DATA: ${{ needs.parse-issue.outputs.task-data }}
+
   ai-implementation:
     name: Generate AI Implementation
     needs: [validate-trigger, check-duplicate, parse-issue, notify-start]
@@ -117,19 +122,19 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: '.github/scripts/package.json'
-          
+          cache: npm
+          cache-dependency-path: .github/scripts/package.json
+
       - name: Install Dependencies
         run: |
           cd .github/scripts
           npm install
-          
+
       - name: Create Feature Branch
         id: create-branch
         run: |
@@ -138,7 +143,7 @@ jobs:
           git checkout -b "$BRANCH_NAME"
           git config --local user.email "action@github.com"
           git config --local user.name "AI Agent"
-          
+
       - name: Generate Implementation
         id: generate
         uses: actions/github-script@v7
@@ -150,7 +155,7 @@ jobs:
         env:
           TASK_DATA: ${{ needs.parse-issue.outputs.task-data }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          
+
       - name: Commit Implementation
         run: |
           git add .
@@ -174,7 +179,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: .github/scripts
-          
+
       - name: Create Pull Request
         uses: actions/github-script@v7
         with:
@@ -183,7 +188,7 @@ jobs:
             const taskData = JSON.parse(process.env.TASK_DATA);
             const branchName = process.env.BRANCH_NAME;
             const implementationResult = process.env.IMPLEMENTATION_RESULT;
-            
+
             await createImplementationPR({ 
               github, 
               context, 
@@ -198,7 +203,15 @@ jobs:
 
   handle-failure:
     name: Handle Failure
-    needs: [validate-trigger, check-duplicate, parse-issue, notify-start, ai-implementation, create-pull-request]
+    needs:
+      [
+        validate-trigger,
+        check-duplicate,
+        parse-issue,
+        notify-start,
+        ai-implementation,
+        create-pull-request,
+      ]
     if: failure()
     runs-on: ubuntu-latest
     permissions:
@@ -208,7 +221,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: .github/scripts
-          
+
       - name: Notify Failure
         uses: actions/github-script@v7
         with:
