--- a/.github/workflows/ai-agent.yml
+++ b/.github/workflows/ai-agent.yml
@@ -7,8 +7,8 @@ on:
     types: [created]
 
 concurrency:
-  group: ai-agent-${{ github.event.issue.number || github.event.number }}
-  cancel-in-progress: false
+  group: ai-agent-issue-${{ github.event.issue.number }}
+  cancel-in-progress: true
 
 env:
   NODE_VERSION: "20"
